Update repo ref and add zenburn css

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -5,6 +5,8 @@
         <title>Reveal.js</title>
         <link rel="stylesheet" href="/css/reveal.css">
         <link rel="stylesheet" href="/css/theme/{{theme}}.css" id="theme">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="/lib/css/zenburn.css">
     </head>
     <body>
 
