Add 'print-pdf' option
Bring in 'print-pdf' query string search to the reveal.html. I took
this from the index.html in the reveal.js project.

The code to support this in server.js will be added next.

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="/css/theme/{{theme}}.css" id="theme">
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="/lib/css/zenburn.css">
+
+        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <script>
+          document.write( '<link rel="stylesheet" href="/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        </script>
     </head>
     <body>
 
