integrated highlight.js support and newer version of reveal.js

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/reveal.css">
         <link rel="stylesheet" href="/css/theme/{{theme}}.css" id="theme">
         <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="/lib/css/zenburn.css">
+        <link rel="stylesheet" href="/lib/css/{{codeTheme}}.css">
 
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
         <script>
@@ -35,6 +35,10 @@
                 // Optional libraries used to extend on reveal.js
                 dependencies: [
                     { src: '/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: '/plugin/highlight/highlight.js', async: true, callback: function() {
+                        console.log("hljs: " + hljs);
+                        hljs.initHighlightingOnLoad();
+                    } },
                     { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
                     { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } }
                 ]
