changed default transition to none

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -30,7 +30,7 @@
                 center: true,
 
                 theme: Reveal.getQueryHash().theme,
-                transition: Reveal.getQueryHash().transition || 'default',
+                transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
 
                 // Optional libraries used to extend on reveal.js
                 dependencies: [
