added highlight.js theme files to repo plus template/css

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/reveal.css">
         <link rel="stylesheet" href="/css/theme/{{theme}}.css" id="theme">
         <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="/lib/css/{{codeTheme}}.css">
+        <link rel="stylesheet" href="/template/css/{{codeTheme}}.css">
 
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
         <script>
