--- a/template/reveal.html
+++ b/template/reveal.html
@@ -36,7 +36,8 @@
                 dependencies: [
                     { src: '/lib/js/classList.js', condition: function() { return !document.body.classList; } },
                     { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-                    { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } }
+                    { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+                    { src: '/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
                 ]
             });
         </script>
