Adding MathJax support

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -42,7 +42,8 @@
               { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
               { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
               { src: '/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-              { src: '/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+              { src: '/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: '/plugin/math/math.js', async: true }
             ];
 
             // default options to init reveal.js
