--- a/template/listing.html
+++ b/template/listing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Directory Listing</title>
-        <link rel="stylesheet" href="/css/theme/{{theme}}.css" id="theme">
+        <link rel="stylesheet" href="/{{{theme}}}" id="theme">
         <style type="text/css">
             body {
                 margin: 1em;
