feat(title): add option to pass title via cli
Closes #60

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Reveal.js</title>
+        <title>{{{title}}}</title>
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="{{{theme}}}" id="theme">
         <!-- For syntax highlighting -->
