add support for injecting scripts

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -12,6 +12,10 @@
         <script>
           document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
         </script>
+
+        {{#scripts}}
+          <script src="/scripts/{{.}}"></script>
+        {{/scripts}}
     </head>
     <body>
 
