--- a/template/reveal.html
+++ b/template/reveal.html
@@ -12,6 +12,10 @@
         <script>
           document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
         </script>
+		<script>
+		  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+		  ':35729/livereload.js?snipver=1"></' + 'script>')
+		</script>
     </head>
     <body>
 
@@ -63,7 +67,7 @@
             options = extend(defaultOptions, options, queryOptions);
             Reveal.initialize(options);
         </script>
-        
+
         {{#scripts}}
           <script src="/scripts/{{.}}"></script>
         {{/scripts}}
