--- a/template/reveal.html
+++ b/template/reveal.html
@@ -12,6 +12,12 @@
         <script>
           document.write( '<link rel="stylesheet" href="//{{{host}}}/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
         </script>
+        {{#watch}}
+		<script>
+		  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+		  ':35729/livereload.js?snipver=1"></' + 'script>')
+		</script>
+        {{/watch}}
     </head>
     <body>
 
