Make `scripts/` link relative
Allows static output to be served from a folder (e.g. using gh-pages)

--- a/template/reveal.html
+++ b/template/reveal.html
@@ -65,7 +65,7 @@
         </script>
         
         {{#scripts}}
-          <script src="/scripts/{{.}}"></script>
+          <script src="scripts/{{.}}"></script>
         {{/scripts}}
     </body>
 </html>
