--- a/template/reveal.html
+++ b/template/reveal.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>{{{title}}}</title>
-        <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="{{{theme}}}" id="theme">
+        <link rel="stylesheet" href="//{{{host}}}/css/reveal.css">
+        <link rel="stylesheet" href="//{{{host}}}/{{{theme}}}" id="theme">
         <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="lib/css/{{{highlightTheme}}}.css">
+        <link rel="stylesheet" href="//{{{host}}}/lib/css/{{{highlightTheme}}}.css">
 
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
         <script>
-          document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+          document.write( '<link rel="stylesheet" href="//{{{host}}}/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
         </script>
     </head>
     <body>
@@ -19,8 +19,8 @@
             <div class="slides">{{{slides}}}</div>
         </div>
 
-        <script src="lib/js/head.min.js"></script>
-        <script src="js/reveal.js"></script>
+        <script src="//{{{host}}}/lib/js/head.min.js"></script>
+        <script src="//{{{host}}}/js/reveal.js"></script>
 
         <script>
             function extend() {
@@ -38,12 +38,12 @@
 
             // Optional libraries used to extend on reveal.js
             var deps = [
-              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
-              { src: 'plugin/math/math.js', async: true }
+              { src: '//{{{host}}}/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: '//{{{host}}}/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: '//{{{host}}}/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: '//{{{host}}}/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: '//{{{host}}}/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: '//{{{host}}}/plugin/math/math.js', async: true }
             ];
 
             // default options to init reveal.js
@@ -65,7 +65,7 @@
         </script>
         
         {{#scripts}}
-          <script src="/scripts/{{.}}"></script>
+          <script src="//{{{host}}}/scripts/{{.}}"></script>
         {{/scripts}}
     </body>
 </html>
