Add support for custom css

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="{{{themeUrl}}}" id="theme">
         <link rel="stylesheet" href="{{{highlightThemeUrl}}}">
         <link rel="stylesheet" href="{{{base}}}/css/print/{{#print}}pdf{{/print}}{{^print}}paper{{/print}}.css" type="text/css" media="print">
+        {{#cssPaths}}
+          <link rel="stylesheet" href="{{{base}}}/{{{.}}}">
+        {{/cssPaths}}
 
         {{#watch}}
 		<script>
