--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{{{highlightThemeUrl}}}">
         <link rel="stylesheet" href="{{{base}}}/css/print/{{#print}}pdf{{/print}}{{^print}}paper{{/print}}.css" type="text/css" media="print">
         {{#cssPaths}}
-          <link rel="stylesheet" href="{{{base}}}/{{{.}}}">
+          <link inline rel="stylesheet" href="{{^standalone}}{{{base}}}{{/standalone}}/{{{.}}}">
         {{/cssPaths}}
 
         {{#watch}}
@@ -71,7 +71,7 @@
         </script>
         
         {{#scriptPaths}}
-          <script src="{{{base}}}/{{{.}}}"></script>
+          <script inline src="{{^standalone}}{{{base}}}{{/standalone}}/{{{.}}}"></script>
         {{/scriptPaths}}
     </body>
 </html>
