--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -67,11 +67,14 @@
 
             var options = {{{revealOptionsStr}}};
             options = extend(defaultOptions, options, queryOptions);
-            Reveal.initialize(options);
         </script>
-        
+
         {{#scriptPaths}}
           <script src="{{{base}}}/{{{.}}}"></script>
         {{/scriptPaths}}
+
+        <script>
+            Reveal.initialize(options);
+        </script>
     </body>
 </html>
