--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -21,13 +21,11 @@
 
     {{#watch}}
 		<script>
-		document.write(
-  '<script src="http://' +
-    (location.host || 'localhost').split(':')[0] +
-    ':35729/livereload.js?snipver=1"></' +
-    'script>'
-);
-</script>
+		  document.write(
+        '<script src="http://' +
+        (location.host || 'localhost').split(':')[0] +
+        ':35729/livereload.js?snipver=1"></' + 'script>');
+    </script>
     {{/watch}}
 
     </head>
@@ -87,7 +85,7 @@
         {{/scriptPaths}}
 
         <script>
-        Reveal.initialize(options);
-</script>
+          Reveal.initialize(options);
+        </script>
     </body>
 </html>
