--- a/lib/template/listing.html
+++ b/lib/template/listing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Directory Listing</title>
-        <link rel="stylesheet" href="/{{{themeUrl}}}" id="theme">
+        <link rel="stylesheet" href="{{{themeUrl}}}" id="theme">
         <style type="text/css">
             body {
                 margin: 1em;
