fixed a bad default

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -59,7 +59,7 @@
       ];
 
       // extract user defined dependencies and userDefinedRevealOptions
-      const {dependencies: userDeps=[], ...userRevealOptions={}} = {{{revealOptionsStr}}};
+      const {dependencies: userDeps=[], ...userRevealOptions} = {{{revealOptionsStr}}};
 
       // default options to init reveal.js
       const defaultOptions = {
