Move building theme URL from template to code

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="{{{absoluteUrl}}}" />
     {{/absoluteUrl}}
     <link rel="stylesheet" href="{{{base}}}/css/reveal.css" />
-    <link rel="stylesheet" href="{{{base}}}/{{{themeUrl}}}" id="theme" />
+    <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
     <link rel="stylesheet" href="{{{base}}}{{{highlightThemeUrl}}}" />
     <link rel="stylesheet" href="{{{base}}}/css/print/{{#print}}pdf{{/print}}{{^print}}paper{{/print}}.css" type="text/css" media="print" />
     {{#cssPaths}}
