Use file paths and names in view object, render HTML in template

--- a/lib/template/listing.html
+++ b/lib/template/listing.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
-    {{{listing}}}
+    <ul>
+      {{#filePaths}}
+      <li><a href="{{.}}">{{.}}</a></li>
+      {{/filePaths}}
+    </ul>
   </body>
 </html>
