Add support for absolute url's in scripts and css

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
     <link rel="stylesheet" href="{{{base}}}{{{highlightThemeUrl}}}" />
     {{#cssPaths}}
-    <link rel="stylesheet" href="{{{base}}}/{{{.}}}" />
+    <link rel="stylesheet" href="{{{.}}}" />
     {{/cssPaths}}
 
     {{#watch}}
@@ -74,7 +74,7 @@
     </script>
 
     {{#scriptPaths}}
-    <script src="{{{base}}}/{{{.}}}"></script>
+    <script src="{{{.}}}"></script>
     {{/scriptPaths}}
 
     <script>
