--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="{{{absoluteUrl}}}" />
     {{/absoluteUrl}}
     <link rel="shortcut icon" href="{{{base}}}/favicon.ico" />
+    <link rel="stylesheet" href="{{{base}}}/dist/reset.css" />
     <link rel="stylesheet" href="{{{base}}}/dist/reveal.css" />
     <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
     <link rel="stylesheet" href="{{{base}}}{{{highlightThemeUrl}}}" />
