add defaults for `slideNumber` and `controls` to template
This fixes #410

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -66,6 +66,8 @@
         history: true,
         center: true,
         transition: 'default', // none/fade/slide/convex/concave/zoom
+        controls: true,
+        slideNumber: true,
         plugins: [
           RevealMarkdown,
           RevealHighlight,
