--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -111,7 +111,7 @@
       const mermaidOptions = extend({ startOnLoad: false }, {{{mermaidOptionsStr}}});
       mermaid.startOnLoad = false;
       mermaid.initialize(mermaidOptions);
-      const cb = function (event) { mermaid.init(mermaidOptions, '.stack.present pre code.mermaid'); };
+      const cb = function (event) { mermaid.init(mermaidOptions, '.stack.present>.present pre code.mermaid'); };
       Reveal.addEventListener('ready', cb);
       Reveal.addEventListener('slidetransitionend', cb);
     </script>
