fix: og url and image have dirname in path

--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -8,8 +8,8 @@
     {{#absoluteUrl}}
     <meta property="og:title" content="{{{title}}}" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{{absoluteUrl}}}/featured-slide.jpg" />
-    <meta property="og:url" content="{{{absoluteUrl}}}" />
+    <meta property="og:image" content="{{{absoluteUrl}}}/{{{ogImage}}}" />
+    <meta property="og:url" content="{{{absoluteUrl}}}/{{{ogUrl}}}" />
     {{/absoluteUrl}}
     <link rel="shortcut icon" href="{{{base}}}/favicon.ico" />
     <link rel="stylesheet" href="{{{base}}}/dist/reset.css" />
