feat: add more meta tags to templates

--- a/lib/template/listing.html
+++ b/lib/template/listing.html
@@ -2,7 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <title>{{pageTitle}}</title>
+    <meta name="description" content="{{{description}}}" />
+
+    <meta property="og:title" content="{{{title}}}" />
+    <meta property="og:description" content="{{{description}}}" />
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:image" content="{{{absoluteUrl}}}/{{{ogImage}}}" />
+    <meta property="og:url" content="{{{absoluteUrl}}}/{{{ogUrl}}}" /> -->
+    <meta property="og:type" content="article" />
+
+    <meta itemProp="name" content="{{{title}}}" />
+    <meta itemProp="description" content="{{{description}}}" />
+
     <link rel="stylesheet" href="{{{themeUrl}}}" id="theme" />
   </head>
 
